--- a/SampleApp/package.json
+++ b/SampleApp/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.13.3",
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "react-native-date-picker": "3.2.8"
   },
   "devDependencies": {
     "@babel/core": "7.12.10",
