--- a/rnTs/MyApp/package.json
+++ b/rnTs/MyApp/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.4"
+    "react-native": "0.63.4",
+    "styled-components": "5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -21,7 +22,10 @@
     "@types/react": "17.0.3",
     "@types/react-native": "0.63.51",
     "@types/react-test-renderer": "17.0.1",
+    "@types/styled-components": "5.1.7",
+    "@types/styled-components-react-native": "5.1.1",
     "babel-jest": "^25.1.0",
+    "babel-plugin-styled-components": "1.12.0",
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
